--- a/mvm-score-archive-api/Properties/launchSettings.json
+++ b/mvm-score-archive-api/Properties/launchSettings.json
@@ -34,7 +34,8 @@
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "environmentVariables": {
         "ASPNETCORE_HTTPS_PORTS": "443",
-        "ASPNETCORE_HTTP_PORTS": "80"
+        "ASPNETCORE_HTTP_PORTS": "80",
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "publishAllPorts": true,
       "useSSL": true
