--- a/mvm-score-archive-api/mvm-score-archive-api.csproj
+++ b/mvm-score-archive-api/mvm-score-archive-api.csproj
@@ -9,6 +9,7 @@
     <UserSecretsId>b08c63c1-6c69-4709-b3ef-adb953686ca4</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <OutputType>Exe</OutputType>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
