--- a/mvm-score-archive-api/appsettings.Development.json
+++ b/mvm-score-archive-api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "ScoreArchiveContext": "User ID=postgres;Password=postgres;Server=192.168.178.108;Port=5432;Database=mvm-score-archive-api;Pooling=true;"
   }
 }
