--- a/mvm-score-archive-api/appsettings.json
+++ b/mvm-score-archive-api/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console"],
-    "MinimumLevel": "Debug",
+    "Using": [ "Serilog.Sinks.Console" ],
+    "MinimumLevel": "Information",
     "WriteTo": [
       {
         "Name": "Console"
@@ -18,5 +18,8 @@
       "ApplicationName": "Your ASP.NET Core App"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "ScoreArchiveContext": "User ID=postgres;Password=postgres;Server=postgres-database;Port=5432;Database=mvm-score-archive-api;Pooling=true;"
+  },
+    "AllowedHosts": "*"
 }
