--- a/mvm-score-archive-repository/mvm-score-archive-repository.csproj
+++ b/mvm-score-archive-repository/mvm-score-archive-repository.csproj
@@ -2,20 +2,18 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>Mvm.Score.Archive.Service</RootNamespace>
+    <RootNamespace>Mvm.Score.Archive.Repository</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
     <PackageReference Include="EFCore.NamingConventions" Version="8.0.3" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\mvm-score-archive-repository\mvm-score-archive-repository.csproj" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
