--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   mvm-score-archive-api:
     image: ${DOCKER_REGISTRY-}mvmscorearchiveapi
-    container_name: demoapp
+    container_name: archive-api
     build:
       context: .
       dockerfile: Dockerfile
@@ -11,7 +11,7 @@ services:
       - 8000:80
     environment:
       - ASPNETCORE_ENVIRONMENT=Release
-      - ASPNETCORE_URLS=http://+:80
+      - ASPNETCORE_HTTP_PORTS=80
     depends_on:
       - postgres
     networks:
@@ -24,7 +24,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     volumes:
-      - ./pgdata:/var/lib/postgresql/data
+      - /home/data/pgdata:/var/lib/postgresql/data
     ports:
       - "5433:5432"
     networks:
