--- a/mvm-score-archive-api/appsettings.Development.json
+++ b/mvm-score-archive-api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "ScoreArchiveContext": "User ID=postgres;Password=postgres;Server=192.168.178.108;Port=5432;Database=mvm-score-archive-api;Pooling=true;"
+    "ScoreArchiveContext": "User ID=postgres;Password=postgres;Server=localhost;Port=5432;Database=mvm-score-archive-api;Pooling=true;"
   }
 }
