removed unnecessary code

--- a/mvm-score-archive-service/mvm-score-archive-service.csproj
+++ b/mvm-score-archive-service/mvm-score-archive-service.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\mvm-score-archive-repository\mvm-score-archive-repository.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
