--- a/mvm-score-archive-service/mvm-score-archive-service.csproj
+++ b/mvm-score-archive-service/mvm-score-archive-service.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
     <PackageReference Include="EFCore.NamingConventions" Version="8.0.3" />
@@ -16,10 +17,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\mvm-score-archive-repository\mvm-score-archive-repository.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
