--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -25,7 +25,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     volumes:
-      - /home/data/pgdata_dev:/var/lib/postgresql/data
+      - /home/dev/data/pgdata_dev:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     networks:
