--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -3,14 +3,14 @@ version: '3.8'
 services:
   mvm-score-archive-api:
     image: ${DOCKER_REGISTRY-}mvmscorearchiveapi
-    container_name: archive-api
+    container_name: archive-api-dev
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - 8000:80
+      - 8001:80
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_ENVIRONMENT=dev
       - ASPNETCORE_HTTP_PORTS=80
     depends_on:
       - postgres
@@ -25,9 +25,19 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     volumes:
-      - /home/dev/data/pgdata_dev:/var/lib/postgresql/data
+      - /home/data/dev/pgdata_dev:/var/lib/postgresql/data
     ports:
-      - "5432:5432"
+      - "5400:5432"
+    networks:
+      - archive-network-dev
+
+  dozzle:
+    container_name: dozzle
+    image: amir20/dozzle:latest
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    ports:
+      - 9999:8080
     networks:
       - archive-network-dev
 
