Add swagger docu

--- a/mvm-score-archive-api/mvm-score-archive-api.csproj
+++ b/mvm-score-archive-api/mvm-score-archive-api.csproj
@@ -10,6 +10,7 @@
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <OutputType>Exe</OutputType>
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
